# crab-chess

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TOURNAMENT.md
src/: crab_evaluate.rs  crab_search.rs  crab_transposition.rs  evaluator.rs  main.rs  precomputed.rs  speval.rs
