[package]
name = "crab-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
env_logger = "0.9.0"
indicatif = "0.17.0"
log = "0.4.17"
rand = "0.8.5"
vampirc-uci = {version = "0.11", features = ["chess"]}
